# business-cycle-static-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.nas  README.md  pyproject.toml
.codex/: config.toml.txt
docs/: agent_workflow.md  archive_regression_shard_plan_phase66.md  backtest_metric_formula_registry.md  backtest_output_location_policy.md  backtest_result_caveat_policy.md  backtest_result_output_contract.md  backtest_result_safety_validator_contract.md  backtest_result_writer_contract.md  backtesting.md  batch_indicator_scoring.md  batch_phase_scoring.md  book_aligned_indicator_implementation_plan.md  book_indicator_gap_analysis.md  book_strategy_golden_benchmark.md  boom_ending_watch_integration_guardrails.md  candidate_recession_integration_design.md  controlled_real_backtest_prototype.md  current_phase_resolver.md  cycle_snapshot.md  cycle_transition_evidence_architecture.md  dashboard_evidence_integration_readiness.md  deployment_validation.md  fred_catalog_verification.md  fred_live_smoke_test.md  full_cycle_state_portfolio_roadmap_phase129_133.md  github_pages_deployment.md  indicator_catalog.md  indicator_dispatcher.md  indicator_scoring.md  indicator_transformations.md  investment_cycle_product_doctrine.md  legacy_production_v1_boundary.md  local_pipeline.md  model_calibration.md  nas_cycle_command_center_phase120.md  nas_dynamic_service_architecture.md  nas_professional_dashboard_ux_assessment_phase119.md  nas_v1_operator_runbook.md  phase48_boom_monitor_evidence_wiring_plan.md  phase_execution_standing_contract.md  (+97 more)
scripts/: append_prospective_shadow_observation.py  apply_declared_phase_start_registry_update.py  audit_aggregation_rule_leakage.py  audit_book_explicit_evaluator_eligibility.py  audit_book_explicit_evaluator_leakage.py  audit_calibration_integrity.py  audit_calibration_leakage.py  audit_evidence_rule_leakage.py  audit_formal_indicator_output_coverage.py  audit_formal_phase_decision_eligibility.py  audit_formal_series_temporal_equivalence.py  audit_forward_capture_topology.py  audit_indicator_promotion_readiness.py  audit_model_freeze_lineage.py  audit_phase10_source_adapter_leakage.py  audit_phase11_evidence_rule_leakage.py  audit_point_in_time_coverage.py  audit_product_doctrine_enforcement.py  audit_production_hardcoding.py  audit_prospective_shadow_registry.py  audit_qa11_observation_runtime_leakage.py  audit_qa12_prestart_leakage.py  audit_qa_phase_lineage.py  audit_rrsfs_formula.py  audit_rrsfs_point_in_time_derivation.py  audit_scenario_exposure.py  audit_scenario_temporal_eligibility.py  audit_shadow_evaluator_runtime.py  audit_shadow_evidence_evaluability.py  audit_shadow_evidence_layer_routing.py  audit_temporal_integrity.py  audit_test_suite_doctrine_quarantine.py  build_cycle_snapshot.py  build_github_pages_research_dashboard.py  build_prospective_first_period_manifest.py  build_prospective_manual_preview_bundle.py  build_research_validation_dashboard.py  build_site.py  check_boom_ending_candidate_coverage.py  (+512 more)
(+2004 files in other folders)
