[project]
name = "business-cycle-static-app"
version = "0.1.0"
description = "Python-first static dashboard for business-cycle investing."
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML",
    "types-requests",
    "xlrd>=2.0.1",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
