[project]
name = "business-cycle-static-app"
version = "0.1.0"
description = "Python-first static dashboard for business-cycle investing."
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML",
    "types-requests",
    "xlrd>=2.0.1",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = ["-m", "not live_optional"]
markers = [
    "legacy_v1: legacy production v1 scoring, resolver, pipeline, snapshot, or Pages compatibility tests",
    "doctrine_aligned: tests that assert mature product doctrine semantics",
    "transition_monitor: legal transition, watch, confirmation, or ordered cycle tests",
    "portfolio_policy_research: portfolio policy template and caveat tests that must not imply current allocation recommendations",
    "historical_replay_backtest: historical replay, backtest, timing, or replay-support tests",
    "governance_scaffold: freeze, closure, audit, lineage, or contract scaffolding tests",
    "safety: secret/output/prohibited wording and safety scan tests",
    "live_optional: opt-in live/local environment tests excluded from default pytest and CI",
]
